--- a/BOOK-OF-QUESTS/GameBundle.csproj
+++ b/BOOK-OF-QUESTS/GameBundle.csproj
@@ -7,10 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.5.1" />
+    <PackageReference Include="GTranslatorAPI" Version="1.0.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NUnit" Version="4.2.2" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.10" />
   </ItemGroup>
 
   <ItemGroup>
